# fastapi-experience

./: .env.sample  00-hello_world.py  Makefile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 61b99e012194_add_exams_model.py
apps/models/: exams.py
apps/routers/: pagination_challenge.py
apps/utils/: database.py  settings.py
fastdoc/: 01-path_parameters.py  02-query_parameters.py
routers/: notes.py
schemas/: notes.py
src/config/: database.py
src/customers/: routes.py  schemas.py  services.py
src/users/: routes.py  schemas.py  utils.py
