[project]
name = "fastapi-experience"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno R. Pianca",email = "brunorpdev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.124.0,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-decouple (>=3.8,<4.0)",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.22.1",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.uv]
package = false
